--- a/Cruz.Projects.html
+++ b/Cruz.Projects.html
@@ -148,16 +148,13 @@
 		<p>Course: Digital Electronics 2018-2019</p>
 		<p>Project Folder(includes our presenation, documentation, and pictures of project): <a href="https://drive.google.com/drive/folders/1462-3751RelpGBv7yp28PbaSSsbJwL3l?usp=sharing" target="_blank"> Folder </a></p>
 		<img src="Nutrition.PNG">
-		<p>
-		In Digital Electronics, we were tasked with creating a circuit implementing
+		<p>In Digital Electronics, we were tasked with creating a circuit implementing
 		our newfound experience of the circuit design process, boolean algebra, and logic
 		expression simplification. To finish this task, a team member and I 
 		decided to work together and create our own circuit. The circuit required
 		a total of six inputs (buttons or switches) to create an end result
-		since we were a team of two.
-		</p>
-		<p>
-		Therefore, we decided to design and test a prototype nutritional
+		since we were a team of two.</p>
+		<p>Therefore, we decided to design and test a prototype nutritional
 		counselor that uses different aspects of AOI Logic. Based on the 
 		food groups a customer says he/she is eating, they can use this
 		system to see if they have eaten healthily. One person will be able
@@ -167,10 +164,8 @@
 		fruits/vegetables, and grains/carbohydrates), they have eaten
 		healthy. However, if sugar-/fat- high foods have been eaten with
 		healthy fats, we cannot say that they have eaten healthy
-		since they may easily exceed their body's fat consumption limit.
-		</p>
-		<p>
-		As the project manager, my responsibilities were to manage the time spent
+		since they may easily exceed their body's fat consumption limit.</p>
+		<p>As the project manager, my responsibilities were to manage the time spent
 		on each subtask in our project, whether it was documentation updating or
 		making sure that our project was being completed in a timely manner. Since we
 		were a team of two, it was not always easy to physically work on the breadboard of the
@@ -179,8 +174,7 @@
 		I was limited to working on <a href="https://drive.google.com/drive/folders/1462-3751RelpGBv7yp28PbaSSsbJwL3l?usp=sharing" target="_blank"> documentation </a> 
 		updates, truth table management, and
 		simplification of our logic expression. However, both of us were able to 
-		work together on torubleshooting our project and create the original project idea.
-		</p>
+		work together on torubleshooting our project and create the original project idea.</p>
 	</div>
 	<div id="footer">
 		<div id="container">
