--- a/Cruz.Projects.html
+++ b/Cruz.Projects.html
@@ -176,6 +176,30 @@
 		simplification of our logic expression. However, both of us were able to 
 		work together on torubleshooting our project and create the original project idea.</p>
 	</div>
+	<div id="project">
+		<p><u><strong>Project 2.3.5 PLD Design </strong></u></p>
+		<p>Dates: 2/27/19 - 3/05/19 </p>
+		<p>Programs: Multisim 14.1</p>
+		<p>Course: Digital Electronics 2018-2019</p>
+		<p>Project Folder(includes pictures, documentation): <a href="https://drive.google.com/open?id=1EEuwwwWIvs4YiM74-r7qW3ojhWfbaJDr" target="_blank"> Folder </a></p>
+		<img src="eproject.PNG">
+		<p>This project required a person, working as an individual, to display a 16 character message on one
+		seven-segment display that would flip through 16 combinations of switch ON/OFF outputs. The message that
+		I chose to display was "Don't get rescinded". This message, if applied to real life, could be displayed around the
+		Dublin High School campus, intended for seniors that have been already accepted into colleges. These seniors, though
+		accepted into different campuses, could develop cases of senioritis, a disease caught by seniors that could cause
+		them to become more lazy and relaxed than usual. If left untreated, this disease could cause severe drops in 
+		a student's GPA, which could lead to these seniors' admissions being rescinded. Since the displays used to display the 
+		message cannot display all characters and 16 characters are needed for the displayed message,
+		the message "dontgetrescinded" was displayed, letter by letter. Pictures showing each letter of the message are located
+		in the project folder above, and a video of the working project is also included.</p>
+		<p>This was the first project where I worked on a Programmable Logic Device (PLD). The PLD is able to take the place
+		of many logic gates and wires that we used in many previous Digital Electronics projects. I did not have any difficulty
+		with this project, as it was a project I thought was easier than previous ones since I did not have to deal
+		with the difficulties of managing wires or possibilities of broken parts. It was a project that reminded me of previous 
+		projects working in HTML or RobotC since most of the project involved working inside the PLD programming process, 
+		developing something similar to a code.</p>
+	</div>
 	<div id="footer">
 		<div id="container">
 			<div id="b0ss">
