--- a/Cruz.Projects.html
+++ b/Cruz.Projects.html
@@ -182,7 +182,7 @@
 		<p>Programs: Multisim 14.1</p>
 		<p>Course: Digital Electronics 2018-2019</p>
 		<p>Project Folder(includes pictures, documentation): <a href="https://drive.google.com/open?id=1EEuwwwWIvs4YiM74-r7qW3ojhWfbaJDr" target="_blank"> Folder </a></p>
-		<img src="eproject.PNG">
+		<img src="PLDThingy.JPG">
 		<p>This project required a person, working as an individual, to display a 16 character message on one
 		seven-segment display that would flip through 16 combinations of switch ON/OFF outputs. The message that
 		I chose to display was "Don't get rescinded". This message, if applied to real life, could be displayed around the
