--- a/Cruz.Resume.HTML
+++ b/Cruz.Resume.HTML
@@ -20,6 +20,9 @@
     	</div>
     </div>
 	<div id="education">
+		<li><a href="https://docs.google.com/document/d/1tg7kEW0d9aHq2bDKOgfB6ft3BmaZWNaQ9FS0L1bWuHo/edit?usp=sharing" title="View my resume on this page.">View my resume here!</a></li>
+	</div>
+	<div id="education">
 		<ul><strong>Education K-12</strong>
 			<ul>
 				<li><p>Graduated elementary school in Dougherty</p></li>
