--- a/Cruz.AboutMe.html
+++ b/Cruz.AboutMe.html
@@ -57,7 +57,56 @@
 				of great appeal to me, as they reflect the person I have developed into in 
 				four years of high school - a person who is 
 				analytical, loving to help, and calculating. </p>
+				<p>Below are pieces of information about two field trips and two guest speakers 
+				that I have learned a lot from and influenced me to make decisions in my life about!</p>
 		</ul>
+	</div>
+	<div id="project">
+		<p><u><strong>Field Trip: Workday Visit</strong></u></p>
+		<p>Thanks to my Engineering Academy, I was able to visit
+		the company Workday to look at different aspects of
+		a physical workspace that concerned user management and design.
+		I have two cousins that are beginning to work at Workday 
+		this year and I chose to go on this field trip because I wanted to 
+		see what exactly took place in a working environment. This field trip 
+		had greatly helped me in my college major selection process, since I was debating 
+		over choosing majoring in Physics or Computer Science as a major 
+		that I would want to choose. After this trip, I began to lean
+		more towards choosing computer science, because it would open up opportunities 
+		for me to work in a place similar to Workday.</p>
+	</div>
+	<div id="project">
+		<p><u><strong>Field Trip: Google Campus</strong></u></p>
+		<p>This field trip is one that will remain important to me forever 
+		since it served as a great source of motivation for me to work harder in 
+		high school and also to show me different parts of the environment in
+		Google. I had always wondered what it would be like working at Google, 
+		and now that I have committed to UC Santa Cruz, I can have the chance to visit 
+		Google more and attempt to network with individuals there. Seeing 
+		the different aspects of the Google Campus showed me how vast and beautiful 
+		the workspace I had dreamed of could be, and made me want to work at Google even 
+		more in the future. </p>
+	</div>
+	<div id="project">
+		<p><u><strong>Guest Speaker: James Morehead</strong></u></p>
+		<p>One of the most notable guest speakers I listened to was James Morehead. 
+		He works at Google as a product manager and most notably worked on a part of 
+		Google called "Google Bulletin". This service, Bulletin, allows users to post 
+		different kinds of real-life content, similar to Instagram and Snapchat, 
+		but have their content globally broadcasted and made very easily accessible to 
+		people. He spoke a lot about the process of starting a project like Bulletin at a 
+		huge company in Google, and opened my eyes to realize the amount of time and 
+		effort managers and developers must put into creating new ideas for people.</p>
+	</div>
+	<div id="project">
+		<p><u><strong>Guest Speaker: Elyse Chen</strong></u></p>
+		<p>Ms. Chen is a researcher from LAM Research who was the first guest speaker I 
+		listened to in the 2018-2019 school year. She taught us a lot about how microchips 
+		are designed and produced. Her speech went in-depth about the different steps 
+		of creating the chips and components of the hardware we use today. I found her 
+		speaking to be very interesting because I had always thought about how the motherboards 
+		in computers looked so pretty and intricate, and this lecture showed me how those 
+		objects of my fascination came to be.</p>
 	</div>
 	<div id="education">
 		<ul><strong>Accomplishments</strong>
