--- a/Cruz.AboutMe.html
+++ b/Cruz.AboutMe.html
@@ -58,7 +58,8 @@
 				four years of high school - a person who is 
 				analytical, loving to help, and calculating. </p>
 				<p>Below are pieces of information about two field trips and two guest speakers 
-				that I have learned a lot from and influenced me to make decisions in my life about!</p>
+				that I have learned a lot from and influenced me to make decisions in my life about! Below those 
+				is a summary of my time in Dublin High School's mentorship timeline.</p>
 		</ul>
 	</div>
 	<div id="project">
@@ -107,6 +108,27 @@
 		speaking to be very interesting because I had always thought about how the motherboards 
 		in computers looked so pretty and intricate, and this lecture showed me how those 
 		objects of my fascination came to be.</p>
+	</div>
+	<div id="project">
+		<p><u><strong>Mentorship Program 2017-2018</strong></u></p>
+		<p>In my junior year of high school, I was assigned a mentor to help me in 
+		my school life and life proceeding towards a career. His name is Dayne Bratsman. 
+		Right now, he is a product manager at Coursehero, and I have learned so much from
+		the small amounts of time that we were able to spend with each other. </p>
+		<p>He was an amazing mentor. He was a person I was able to speak well to and 
+		listened well to everything I said and offered so much solid advice on all of 
+		my interests and needs. He taught me to think differently about different aspects 
+		of programming and mathematics in school, and also helped me improve the way 
+		that I allocate my time outside of school. However, one of my most memorable conversations with him 
+		was the way he emphasized the different aspects of prospective employees for a company. 
+		In front of me, he compared two resumes of prospective employees. One employee showed a very 
+		high GPA in college, while the other showed a less high GPA that had more experience 
+		outside the classroom in internships and in pursuit of goals through projects. He helped me 
+		reinforce the fact in my mind that I would not just need good grades to succeed, but to apply 
+		concepts and information that I have learned to real-world projects. He told me that it was 
+		experience that matters the most, and in turn I have now been thinking of ways I can use my 
+		skills I have gained in programming and engineering these four years to provide 
+		assistance to the less fortunate around me and in preparation for the workplace.</p>
 	</div>
 	<div id="education">
 		<ul><strong>Accomplishments</strong>
