--- a/Cruz.AboutMe.html
+++ b/Cruz.AboutMe.html
@@ -22,7 +22,7 @@
 	<div id="education">
 		<ul><strong>About Me</strong>
 			<ul id="paragraphaboutme">
-				<img src="ME.PNG">
+				<img src="ME.JPG">
 				<p>My name is Isaiah Cruz. In high school, I have taken a variety
 				of courses concerning engineering, particularly software engineering
 				Currently, I am
