--- a/Cruz.Contact.html
+++ b/Cruz.Contact.html
@@ -10,7 +10,7 @@
       	<div id="b0ss">
 			<div id="container">
 				<ul class="nav nav-tabs">
-					<li><a href="Cruz.Home.html" title="View my interests and projects on this page.">Home</a></li>
+					<li><a href="index.html" title="View my interests and projects on this page.">Home</a></li>
 					<li><a href="Cruz.AboutMe.html" title="Find out about me here.">About Me</a></li>
 					<li><a href="Cruz.Resume.HTML" title="See my work experience and accomplishments.">Resume/Work Experience</a></li>
 					<li class="active"><a href="Cruz.Contact.html"  title="Click here to find out about how to reach me.">Contact Me</a></li>
