--- a/Cruz.AboutMe.html
+++ b/Cruz.AboutMe.html
@@ -57,8 +57,8 @@
 				of great appeal to me, as they reflect the person I have developed into in 
 				four years of high school - a person who is 
 				analytical, loving to help, and calculating. </p>
-				<p>Below are pieces of information about two field trips and two guest speakers 
-				that I have learned a lot from and influenced me to make decisions in my life about! Below those 
+				<p>In my Resume/Work Experience page are pieces of information about two field trips and two guest speakers 
+				that I have learned a lot from and influenced me to make decisions in my life about! Also included  
 				is a summary of my time in Dublin High School's mentorship timeline.</p>
 		</ul>
 	</div>
